# RevCode

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.py
Revcode_experiment/: Sentiment Analysis Revcode Experiment-IITP Product reviews.ipynb
meta/: enums.py  mappings.py
removed_code/: init_lines  revcode_conversion_old.py  revcode_helpers_old.py
revcode/: INTENT_VERBS.tsv  INTENT_VERBS.tsv_rev  Preposition.tsv  RevCode.tsv  Revcode_Normalizer_ProximityChecker.py  __init__.py  conj.tsv  conj.tsv_rev  data.txt  data_assamese  data_assamese.txt  indic_normalisaton.py  indic_normalizer.py  maps_assamese  maps_bengali  maps_bengali.txt  rev_code_joiner.py  revcode_conversion.py  revcode_helpers.py  tsv_reader.py
revcode/mappings/: __init__.py  assamese_to_rev.py  bengali_to_rev.py  gujarati_to_rev.py  hindi_to_rev.py  kannada_to_rev.py  language_mappings.py  malayalam_to_rev.py  marathi_to_rev.py  odia_to_rev.py  oriya_to_rev.py  punjabi_to_rev.py  rev_to_assamese.py  rev_to_bengali.py  rev_to_gujarati.py  rev_to_hindi.py  rev_to_kannada.py  rev_to_malayalam.py  rev_to_marathi.py  rev_to_odia.py  rev_to_oriya.py  rev_to_punjabi.py  rev_to_tamil.py  rev_to_telugu.py  tamil_to_rev.py  telugu_to_rev.py
revcode/meta/: context_mappings.py  enums.py  language_mappings.py  mappings.py  preprocess_mappings.py  tags.py
revcode/meta/matra/: hindi.py  punjabi.py
test/: conj
