[project]
name = "revcode"
version = "3"
authors = [
  { name="Bhupen Chauhan", email="bhupen.chauhan@reverieinc.com" },
]
description = "A Roman encoding module for Indian languages"
readme = "README.md"
requires-python = ">=3.5"
keywords = ['Roman Encoding', 'revcode', 'Indic languages', 'Indian languages']
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Intended Audience :: Developers'
]

[project.urls]
"Homepage" = "https://github.com/reverieinc/revcode"
"Bug Tracker" = "https://github.com/reverieinc/revcode/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
